Controlador Usando Api

--- a/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
+++ b/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="venta" asp-action="Index">Venta</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="venta" asp-action="Index">VentaSinApi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ventacontroller2" asp-action="Index">VentaConApi</a>
                         </li>
                     </ul>
                 </div>
