Trabajo de Programación Implementacion de la capa de servicio Parte I 3.0

--- a/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
+++ b/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Detalleventa" asp-action="Index">Detalleventa</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DetalleventaController2" asp-action="Index">DetalleventaConApi</a>
+                        </li>
                     </ul>
                 </div>
             </div>
