Implementacion Capa de Servicio Parte 2

--- a/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
+++ b/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ventacontroller2" asp-action="Index">VentaConApi</a>
+                        </li
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ventacontroller3" asp-action="Index">VentaHTTP</a>
                         </li>
                     </ul>
                 </div>
