--- a/Venta/Venta/Venta.Web/Views/VentaController2/Edit.cshtml
+++ b/Venta/Venta/Venta.Web/Views/VentaController2/Edit.cshtml
@@ -4,13 +4,18 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Venta Con Api</h1>
+<h1>Edit Con Api</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="idVenta" class="control-label"></label>
+                <input asp-for="idVenta" class="form-control" />
+                <span asp-validation-for="idVenta" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="numeroDocumento" class="control-label"></label>
                 <input asp-for="numeroDocumento" class="form-control" />
