Trabajo de Programación Implementacion de la capa de servicio Parte II

--- a/Venta/Venta/Venta.Web/Views/DetalleventaController2/Details.cshtml
+++ b/Venta/Venta/Venta.Web/Views/DetalleventaController2/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details detalleventa con API</h1>
+<h1>Details Detalleventa Con API</h1>
 
 <div>
     <hr />
