--- a/Venta/Venta/Venta.Web/Views/DetalleventaController2/Edit.cshtml
+++ b/Venta/Venta/Venta.Web/Views/DetalleventaController2/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>EdiT detalleventa con API </h1>
+<h1>Edit Detalleventa Con API </h1>
 
 <hr />
 <div class="row">
