--- a/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
+++ b/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
@@ -26,10 +26,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Detalleventa" asp-action="Index">Detalleventa</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Detalleventa" asp-action="Index">Detalleventa Sin API</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="DetalleventaController2" asp-action="Index">DetalleventaConApi</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DetalleventaController2" asp-action="Index">Detalleventa Con API</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DetalleventaController3" asp-action="Index">Detalleventa HTTP</a>
                         </li>
                     </ul>
                 </div>
