--- a/Venta/Venta/Venta.Web/Views/DetalleventaController2/Create.cshtml
+++ b/Venta/Venta/Venta.Web/Views/DetalleventaController2/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create detalleventa con API</h1>
+<h1>Create Detalleventa Con API</h1>
 
 <hr />
 <div class="row">
