--- a/Venta/Venta/Venta.Web/Views/DetalleventaController2/Index.cshtml
+++ b/Venta/Venta/Venta.Web/Views/DetalleventaController2/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Detalleventa con API</h1>
+<h1>Detalleventa Con API</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
