--- a/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
+++ b/Venta/Venta/Venta.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MenuRol" asp-action="Index">MenuRol</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MenuRolController2" asp-action="Index">MenucRol con api</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MenuController3" asp-action="Index">Menu con http</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MenuRolController3" asp-action="Index">MenuRol con http</a>
+                        </li>
                     </ul>
                 </div>
             </div>
